syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.wanted.gold.grpc";
option java_outer_classname = "AuthProto";

message AuthRequest {
  string accessToken = 1;
}

message AuthResponse {
  string userId = 1;
}

service AuthService {
  rpc AuthCall (AuthRequest) returns (AuthResponse);
}